--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
   @media (max-width:480px){ .kpis{grid-template-columns:1fr} }
 
   .grid{display:grid;gap:18px}
-  .mid{grid-template-columns:2fr 1.4fr}
+  /* Make Practice Balance a little wider than before */
+  .mid{grid-template-columns:1.4fr 1.8fr}
   .bottom{grid-template-columns:1.6fr 1.4fr}
   @media (max-width:980px){.mid,.bottom{grid-template-columns:1fr}}
 
@@ -63,6 +64,9 @@
   .section h2{font-size:18px;margin:0 0 12px;color:#111827}
   canvas{width:100%;height:auto;max-height:320px}
 
+  /* Utility to span entire grid row */
+  .span-all{grid-column:1 / -1}
+
   /* Heatmap */
   .heatmap-container{background:#f8fafc;border-radius:12px;padding:16px;border:1px solid #e5e7eb}
   .day-headers{display:grid;grid-template-columns:repeat(7,1fr);gap:4px;margin-bottom:8px}
@@ -77,7 +81,7 @@
   .practice-bar.read.completed{background:var(--read)}
   .practice-bar.intimacy.completed{background:var(--intimacy)}
   .practice-bar.memory.completed{background:var(--memory)}
-  /* NEW: partial state (half-filled) */
+  /* partial state (half-filled) */
   .practice-bar.partial .practice-label{color:#ffffff}
   .practice-bar.read.partial{background:linear-gradient(90deg,var(--read) 0 50%, var(--empty) 50% 100%)}
   .practice-bar.intimacy.partial{background:linear-gradient(90deg,var(--intimacy) 0 50%, var(--empty) 50% 100%)}
@@ -159,7 +163,8 @@
 
   <!-- BOTTOM -->
   <div class="grid bottom section" style="margin-top:18px;">
-    <div class="card">
+    <!-- Span across the entire bottom -->
+    <div class="card span-all">
       <h2>Daily Consistency Heatmap (last 6 weeks)</h2>
       <div class="heatmap-container">
         <div class="day-headers">
@@ -175,6 +180,7 @@
         <div class="legend-note">Symbols: ✓ = Done (1), ½ = Partial (0–&lt;1), – = Not done (0)</div>
       </div>
     </div>
+  </div>
 
 
 <script>
@@ -393,9 +399,11 @@
 
     const accelEl = document.getElementById("accel");
     const accelText = document.getElementById("accelText");
-    accelText.textContent = `Acceleration Score: ${accelDelta>=0?"+":""}${accelDelta.toFixed(1)} pts (recent 3w vs first 3w)`;
-    accelEl.classList.remove("ok","warn","bad");
-    accelEl.classList.add(accelDelta>+1 ? "ok" : (accelDelta<-1 ? "bad" : "warn"));
+    if (accelEl && accelText){
+      accelText.textContent = `Acceleration Score: ${accelDelta>=0?"+":""}${accelDelta.toFixed(1)} pts (recent 3w vs first 3w)`;
+      accelEl.classList.remove("ok","warn","bad");
+      accelEl.classList.add(accelDelta>+1 ? "ok" : (accelDelta<-1 ? "bad" : "warn"));
+    }
 
     const weeksSorted = Object.keys(byWeekPractice).sort();
     const practices = Object.keys(byPractice);
@@ -407,28 +415,30 @@
     }
 
     const velocityGrid = document.getElementById("velocityGrid");
-    velocityGrid.innerHTML = "";
-    practices.forEach(pr=>{
-      const series = weeklyPctByPractice(pr);
-      const f3 = series.slice(0,3);
-      const r3 = series.slice(-3);
-      const delta = avg(r3) - avg(f3);
+    if (velocityGrid){
+      velocityGrid.innerHTML = "";
+      practices.forEach(pr=>{
+        const series = weeklyPctByPractice(pr);
+        const f3 = series.slice(0,3);
+        const r3 = series.slice(-3);
+        const delta = avg(r3) - avg(f3);
 
-      const row = document.createElement("div");
-      row.className = "vrow";
-      const name = document.createElement("div");
-      name.className = "vname"; name.textContent = pr;
-      const deltaEl = document.createElement("div");
-      const trendClass = delta>+1 ? "up" : (delta<-1 ? "down" : "flat");
-      const arrow = delta>+1 ? "↗" : (delta<-1 ? "↘" : "→");
-      deltaEl.className = `vdelta ${trendClass}`;
-      deltaEl.textContent = `${arrow} ${delta>=0?"+":""}${delta.toFixed(1)} pts`;
-      row.appendChild(name); row.appendChild(deltaEl);
-      velocityGrid.appendChild(row);
-    });
+        const row = document.createElement("div");
+        row.className = "vrow";
+        const name = document.createElement("div");
+        name.className = "vname"; name.textContent = pr;
+        const deltaEl = document.createElement("div");
+        const trendClass = delta>+1 ? "up" : (delta<-1 ? "down" : "flat");
+        const arrow = delta>+1 ? "↗" : (delta<-1 ? "↘" : "→");
+        deltaEl.className = `vdelta ${trendClass}`;
+        deltaEl.textContent = `${arrow} ${delta>=0?"+":""}${delta.toFixed(1)} pts`;
+        row.appendChild(name); row.appendChild(deltaEl);
+        velocityGrid.appendChild(row);
+      });
+    }
 
     const traj = document.getElementById("trajectoryHint");
-    traj.textContent = `Trajectory Projection: finish at ${pct(projectedFinalPct)} vs goal 95%.`;
+    if (traj) traj.textContent = `Trajectory Projection: finish at ${pct(projectedFinalPct)} vs goal 95%.`;
 
     // Consistency Momentum: streak (≥2 of 3 dailies) & bounce-back speed
     function ymdRange(start, end){
@@ -447,8 +457,11 @@
     for(let j=1;j<wPct.length;j++){ gains.push(wPct[j]-wPct[j-1]); }
     const last3Gains = gains.slice(-3).filter(g=>g>0);
     const bounce = last3Gains.length? (avg(last3Gains)).toFixed(1) : "0.0";
-    document.getElementById("consistencyHint").textContent =
-      `Consistency Momentum: current streak ${streak} day(s) (≥2/3 dailies). Recent bounce-back speed ~ +${bounce} pts/week.`;
+    const consistencyHint = document.getElementById("consistencyHint");
+    if (consistencyHint){
+      consistencyHint.textContent =
+        `Consistency Momentum: current streak ${streak} day(s) (≥2/3 dailies). Recent bounce-back speed ~ +${bounce} pts/week.`;
+    }
   })();
 </script>
 </body>
