--- a/index.html
+++ b/index.html
@@ -63,21 +63,21 @@
   .section h2{font-size:18px;margin:0 0 12px;color:#111827}
   canvas{width:100%;height:auto;max-height:320px}
 
-  /* Heatmap (much shorter height) */
-  .heatmap-container{background:#f8fafc;border-radius:12px;padding:10px;border:1px solid #e5e7eb}
-  .day-headers{display:grid;grid-template-columns:repeat(7,1fr);gap:2px;margin-bottom:4px}
-  .day-header{text-align:center;font-size:10px;font-weight:600;color:var(--muted);padding:2px 0}
-  .heat-grid{display:grid;grid-template-columns:repeat(7,1fr);gap:2px}
+  /* Heatmap (moderately shorter height) */
+  .heatmap-container{background:#f8fafc;border-radius:12px;padding:12px;border:1px solid #e5e7eb}
+  .day-headers{display:grid;grid-template-columns:repeat(7,1fr);gap:3px;margin-bottom:6px}
+  .day-header{text-align:center;font-size:11px;font-weight:600;color:var(--muted);padding:3px 0}
+  .heat-grid{display:grid;grid-template-columns:repeat(7,1fr);gap:3px}
   .day-cell{
-    aspect-ratio:.85; min-height:20px; max-height:24px; /* much shorter */
-    background:#ffffff;border-radius:4px;padding:2px;
-    display:grid;grid-template-rows:repeat(3,1fr);gap:1px;
+    aspect-ratio:.75; min-height:32px; max-height:36px; /* moderately shorter than original */
+    background:#ffffff;border-radius:6px;padding:3px;
+    display:grid;grid-template-rows:repeat(3,1fr);gap:2px;
     border:1px solid #e5e7eb;position:relative;transition:all .2s ease
   }
   .day-cell:hover{transform:translateY(-1px);box-shadow:0 4px 12px rgba(0,0,0,.1)}
   .day-cell.empty{background:#f9fafb;border:1px solid #f3f4f6}
-  .practice-bar{border-radius:2px;background:var(--empty);display:flex;align-items:center;justify-content:center;position:relative;transition:all .2s ease}
-  .practice-bar .practice-label{font-size:6px;font-weight:800;color:#6b7280;line-height:1}
+  .practice-bar{border-radius:3px;background:var(--empty);display:flex;align-items:center;justify-content:center;position:relative;transition:all .2s ease}
+  .practice-bar .practice-label{font-size:7px;font-weight:800;color:#6b7280;line-height:1}
   .practice-bar.completed .practice-label{color:#ffffff}
   .practice-bar.read.completed{background:var(--read)}
   .practice-bar.intimacy.completed{background:var(--intimacy)}
@@ -87,12 +87,12 @@
   .practice-bar.read.partial{background:linear-gradient(90deg,var(--read) 0 50%, var(--empty) 50% 100%)}
   .practice-bar.intimacy.partial{background:linear-gradient(90deg,var(--intimacy) 0 50%, var(--empty) 50% 100%)}
   .practice-bar.memory.partial{background:linear-gradient(90deg,var(--memory) 0 50%, var(--empty) 50% 100%)}
-  .day-number{position:absolute;top:-3px;right:-3px;background:rgba(255,255,255,.9);border:1px solid #e5e7eb;border-radius:50%;width:12px;height:12px;display:flex;align-items:center;justify-content:center;font-size:6px;font-weight:600;color:var(--muted)}
-  .legend{display:flex;align-items:center;gap:16px;margin-top:8px;flex-wrap:wrap;justify-content:center}
-  .chip{display:flex;align-items:center;gap:8px;background:rgba(255,255,255,.7);padding:4px 10px;border-radius:20px;border:1px solid #e5e7eb}
-  .color-swatch{width:14px;height:14px;border-radius:4px;border:1px solid rgba(255,255,255,.3)}
-  .chip-label{font-size:11px;font-weight:500;color:var(--ink)}
-  .legend-note{width:100%;text-align:center;font-size:9px;color:var(--muted);margin-top:2px}
+  .day-number{position:absolute;top:-4px;right:-4px;background:rgba(255,255,255,.9);border:1px solid #e5e7eb;border-radius:50%;width:13px;height:13px;display:flex;align-items:center;justify-content:center;font-size:7px;font-weight:600;color:var(--muted)}
+  .legend{display:flex;align-items:center;gap:16px;margin-top:10px;flex-wrap:wrap;justify-content:center}
+  .chip{display:flex;align-items:center;gap:8px;background:rgba(255,255,255,.7);padding:5px 10px;border-radius:20px;border:1px solid #e5e7eb}
+  .color-swatch{width:15px;height:15px;border-radius:4px;border:1px solid rgba(255,255,255,.3)}
+  .chip-label{font-size:12px;font-weight:500;color:var(--ink)}
+  .legend-note{width:100%;text-align:center;font-size:10px;color:var(--muted);margin-top:3px}
 </style>
 </head>
 <body>
