--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
   .section h2{font-size:18px;margin:0 0 12px;color:#111827}
   canvas{width:100%;height:auto;max-height:320px}
 
-  /* Heatmap (moderately shorter height, centered with increased width) */
-  .heatmap-container{background:#f8fafc;border-radius:12px;padding:12px;border:1px solid #e5e7eb;max-width:840px;margin:0 auto}
+  /* Heatmap (moderately shorter height, same width as radar chart) */
+  .heatmap-container{background:#f8fafc;border-radius:12px;padding:12px;border:1px solid #e5e7eb}
   .day-headers{display:grid;grid-template-columns:repeat(7,1fr);gap:3px;margin-bottom:6px}
   .day-header{text-align:center;font-size:11px;font-weight:600;color:var(--muted);padding:3px 0}
   .heat-grid{display:grid;grid-template-columns:repeat(7,1fr);gap:3px}
