--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
   .day-header{text-align:center;font-size:11px;font-weight:600;color:var(--muted);padding:3px 0}
   .heat-grid{display:grid;grid-template-columns:repeat(7,1fr);gap:3px}
   .day-cell{
-    aspect-ratio:.75; min-height:40px; max-height:48px; /* taller cells for bigger rectangles */
-    background:#ffffff;border-radius:6px;padding:4px;
-    display:grid;grid-template-rows:repeat(3,1fr);gap:3px;
+    aspect-ratio:.75; min-height:50px; max-height:58px; /* even taller cells for bigger rectangles */
+    background:#ffffff;border-radius:6px;padding:5px;
+    display:grid;grid-template-rows:repeat(3,1fr);gap:4px;
     border:1px solid #e5e7eb;position:relative;transition:all .2s ease
   }
   .day-cell:hover{transform:translateY(-1px);box-shadow:0 4px 12px rgba(0,0,0,.1)}
   .day-cell.empty{background:#f9fafb;border:1px solid #f3f4f6}
-  .practice-bar{border-radius:4px;background:var(--empty);display:flex;align-items:center;justify-content:center;position:relative;transition:all .2s ease;min-height:10px}
-  .practice-bar .practice-label{font-size:8px;font-weight:800;color:#6b7280;line-height:1}
+  .practice-bar{border-radius:5px;background:var(--empty);display:flex;align-items:center;justify-content:center;position:relative;transition:all .2s ease;min-height:14px}
+  .practice-bar .practice-label{font-size:9px;font-weight:800;color:#6b7280;line-height:1}
   .practice-bar.completed .practice-label{color:#ffffff}
   .practice-bar.read.completed{background:var(--read)}
   .practice-bar.intimacy.completed{background:var(--intimacy)}
