--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
   .day-header{text-align:center;font-size:11px;font-weight:600;color:var(--muted);padding:3px 0}
   .heat-grid{display:grid;grid-template-columns:repeat(7,1fr);gap:3px}
   .day-cell{
-    aspect-ratio:.75; min-height:300px; max-height:348px; /* 6x bigger than original */
-    background:#ffffff;border-radius:6px;padding:30px;
-    display:grid;grid-template-rows:repeat(3,1fr);gap:24px;
+    aspect-ratio:.75; min-height:150px; max-height:174px; /* back to 3x original size */
+    background:#ffffff;border-radius:6px;padding:15px;
+    display:grid;grid-template-rows:repeat(3,1fr);gap:12px;
     border:1px solid #e5e7eb;position:relative;transition:all .2s ease
   }
   .day-cell:hover{transform:translateY(-1px);box-shadow:0 4px 12px rgba(0,0,0,.1)}
   .day-cell.empty{background:#f9fafb;border:1px solid #f3f4f6}
-  .practice-bar{border-radius:12px;background:var(--empty);display:flex;align-items:center;justify-content:center;position:relative;transition:all .2s ease;min-height:84px}
-  .practice-bar .practice-label{font-size:32px;font-weight:800;color:#6b7280;line-height:1}
+  .practice-bar{border-radius:8px;background:var(--empty);display:flex;align-items:center;justify-content:center;position:relative;transition:all .2s ease;min-height:42px}
+  .practice-bar .practice-label{font-size:16px;font-weight:800;color:#6b7280;line-height:1}
   .practice-bar.completed .practice-label{color:#ffffff}
   .practice-bar.read.completed{background:var(--read)}
   .practice-bar.intimacy.completed{background:var(--intimacy)}
