--- a/index.html
+++ b/index.html
@@ -78,6 +78,34 @@
   .day-cell.empty{background:#f9fafb;border:1px solid #f3f4f6}
   .practice-bar{border-radius:8px;background:var(--empty);display:flex;align-items:center;justify-content:center;position:relative;transition:all .2s ease;min-height:42px}
   .practice-bar .practice-label{font-size:16px;font-weight:800;color:#6b7280;line-height:1}
+
+  /* Mobile responsive heatmap */
+  @media (max-width:768px){
+    .day-cell{
+      min-height:80px; max-height:92px; /* smaller on tablets */
+      padding:8px; gap:6px;
+    }
+    .practice-bar{min-height:22px; border-radius:4px}
+    .practice-bar .practice-label{font-size:10px}
+    .day-number{width:10px;height:10px;font-size:6px;top:-2px;right:-2px}
+  }
+  
+  @media (max-width:480px){
+    .day-cell{
+      min-height:50px; max-height:58px; /* much smaller on phones */
+      padding:4px; gap:3px;
+    }
+    .practice-bar{min-height:14px; border-radius:3px}
+    .practice-bar .practice-label{font-size:8px}
+    .day-number{width:9px;height:9px;font-size:5px}
+    .heatmap-container{padding:8px}
+    .heat-grid{gap:2px}
+    .day-headers{gap:2px;margin-bottom:4px}
+    .legend{margin-top:6px;gap:8px}
+    .chip{padding:3px 6px}
+    .chip-label{font-size:10px}
+    .color-swatch{width:12px;height:12px}
+  }
   .practice-bar.completed .practice-label{color:#ffffff}
   .practice-bar.read.completed{background:var(--read)}
   .practice-bar.intimacy.completed{background:var(--intimacy)}
